YAMLs/002_terminology-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminology-svc
  # annotations:
  #   prometheus.io/port: '3000'
  #   prometheus.io/scrape: 'true'
spec:
  selector:
    app: terminology-svc
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
