YAMLs/003_terminology-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: terminology-svc
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /terminologies/icpc2/
    route:
    - destination:
        host: terminology-svc.default.svc.cluster.local
        port:
          number: 3000
